--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- This is Squarespace. --><!-- grouse-ukulele-23dc -->
 <base href="">
 <meta charset="utf-8" />
-<title>ELEV8  (Copy)</title>
+<title>ELEV8</title>
 <meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/67da436194ed010b63e99180/1742357354563-6ODDU0X3L6RE2PJG57YQ/favicon.ico?format=100w"/>
 <link rel="canonical" href="https://grouse-ukulele-23dc.squarespace.com"/>
 <meta property="og:site_name" content="ELEV8  (Copy)"/>
